Using SASS file for styling

--- a/components/blocks/ge-titled-paragraph/ge-titled-paragraph.module.scss
+++ b/components/blocks/ge-titled-paragraph/ge-titled-paragraph.module.scss
@@ -1,5 +1,5 @@
 // The class name needs to match the names of the category and block
-.wp-block-custom-ge-titled-paragraph {
+.geTitledParagraph {
 
   position: relative;
 
