--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -2,3 +2,11 @@
 .cHKrny {
     min-width: 300px !important;
 }
+
+.button-primary {
+    text-transform: uppercase;
+}
+
+/* a:hover {
+    text-decoration: none;
+} */
