--- a/components/blocks/ge-grid/ge-fact-card-variant-2/ge-fact-card-variant-2.module.scss
+++ b/components/blocks/ge-grid/ge-fact-card-variant-2/ge-fact-card-variant-2.module.scss
@@ -3,7 +3,7 @@
   position  : relative;
   height    : auto;
   overflow  : hidden;
-  min-height: 400px;
+  width: 100%;
 
   a:link,
   a:visited,
