updated grid container style

--- a/components/blocks/ge-grid/ge-small-article/ge-small-article.module.scss
+++ b/components/blocks/ge-grid/ge-small-article/ge-small-article.module.scss
@@ -6,8 +6,8 @@
   overflow     : hidden;
 
 
-  .card-container.card_wrapper {
-    padding         : 0 !important;
+  .cardContainer {
+    padding         : 0 20px 0 0;
     background-color: transparent;
     box-shadow      : none;
   }
