--- a/components/blocks/ge-grid/ge-grid.module.scss
+++ b/components/blocks/ge-grid/ge-grid.module.scss
@@ -8,8 +8,12 @@
 .gridItems {
   display: grid;
   grid-template-columns: auto auto auto;
+  grid-gap: 0 30px;
 }
 
+.gridTitle {
+  padding-bottom: 30px;
+}
   div.wp-block-custom-ge-small-article {
     padding-left: 0;
     padding-right: 0;
