--- a/components/blocks/ge-grid/ge-small-article/ge-small-article.module.scss
+++ b/components/blocks/ge-grid/ge-small-article/ge-small-article.module.scss
@@ -1,54 +1,51 @@
 // The class name needs to match the names of the category and block
 
 .geSmallArticle {
-  position     : relative;
-  width        : 100%;
-  overflow     : hidden;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  // padding: 0 20px 0 0;
 
 
-  .cardContainer {
-    padding         : 0 20px 0 0;
-    background-color: transparent;
-    box-shadow      : none;
-  }
-
-  .article-media {
-    width   : 100%;
-    height  : 216px;
+  .imageContainer {
+    width: 100%;
+    height: 216px;
     position: relative;
+    overflow: hidden;
+    margin-bottom: 20px;
 
-    .media-bg {
-      position: absolute;
-      width   : calc(100% - 66px);
-      height  : 37px;
-      bottom  : -1px;
+    img {
+      width: 100%;
+      height: auto;
     }
   }
+
+
 
   a:link,
   a:visited,
   a:active,
   a:hover {
     text-decoration: none;
-    cursor         : pointer;
-    color          : inherit;
+    cursor: pointer;
+    color: inherit;
   }
 
   div.card-container {
-    width                : 100%;
-    height               : 170px;
-    margin               : 0;
-    padding              : 0;
-    background-size      : 100% auto;
+    width: 100%;
+    height: 170px;
+    margin: 0;
+    padding: 0;
+    background-size: 100% auto;
     //background-position: left;
-    background-repeat    : no-repeat;
-    display              : flex;
+    background-repeat: no-repeat;
+    display: flex;
   }
 
   div.card-feature {
-    width : 31.25%;
+    width: 31.25%;
     height: 170px;
-    float : left;
+    float: left;
   }
 
   div.card-stack {
@@ -64,24 +61,24 @@
   }
 
   p.description {
-    margin-top        : 24px;
-    position          : relative;
-    overflow          : hidden;
-    display           : -webkit-box;
+    margin-top: 24px;
+    position: relative;
+    overflow: hidden;
+    display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
   }
 
   .call-to-action {
-    float     : left;
-    width     : 48px;
-    height    : 19px;
+    float: left;
+    width: 48px;
+    height: 19px;
     margin-top: 5px;
   }
 
   .card-stack {
     .ficon-lg-arrow-right {
-      opacity   : 0;
+      opacity: 0;
       transition: opacity 0.2s ease-out;
     }
 
@@ -108,21 +105,21 @@
 
   @media (min-width: 768px) {
     position: relative;
-    width   : 100%;
-    height  : fit-content;
+    width: 100%;
+    height: fit-content;
 
     div.card-container {
-      width  : 100%;
-      height : 170px;
-      margin : 0;
+      width: 100%;
+      height: 170px;
+      margin: 0;
       padding: 0;
       display: flex;
     }
 
     div.card-feature {
-      width : 35.67708333333333%;
+      width: 35.67708333333333%;
       height: 170px;
-      float : left;
+      float: left;
     }
 
     h6.title {
@@ -132,31 +129,31 @@
   }
 
   @media (min-width: 992px) {
-    position     : relative;
+    position: relative;
     margin-bottom: 64px;
 
 
     .card_wrapper .article-media {
-      flex     : 0 0 100%;
+      flex: 0 0 100%;
       max-width: 100%;
-      padding  : 0px;
+      padding: 0px;
     }
 
     div.card-container {
-      width                      : 100%;
+      width: 100%;
       //   height                : 658px;
-      margin                     : 0;
-      padding                    : 0;
-      display                    : block;
+      margin: 0;
+      padding: 0;
+      display: block;
     }
 
     div.card-feature {
-      width : 100%;
+      width: 100%;
       height: 200px;
     }
 
     h6.title {
-      margin-top    : 0;
+      margin-top: 0;
       letter-spacing: 2px;
     }
 
@@ -197,9 +194,9 @@
     }
 
     h6.title {
-      position          : relative;
-      overflow          : hidden;
-      display           : -webkit-box;
+      position: relative;
+      overflow: hidden;
+      display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
     }
@@ -210,14 +207,14 @@
 
     .card-stack.article-content {
       padding-left: 10px;
-      padding-top : 0;
-      margin-top  : 0;
+      padding-top: 0;
+      margin-top: 0;
     }
 
     .call-to-action {
-      float     : left;
-      width     : 48px;
-      height    : 19px;
+      float: left;
+      width: 48px;
+      height: 19px;
       margin-top: 0px;
     }
 
