--- a/components/blocks/ge-grid/ge-small-article/ge-small-article.module.scss
+++ b/components/blocks/ge-grid/ge-small-article/ge-small-article.module.scss
@@ -31,24 +31,23 @@
     color: inherit;
   }
 
-  div.card-container {
+  .cardContainer {
     width: 100%;
     height: 170px;
     margin: 0;
     padding: 0;
     background-size: 100% auto;
-    //background-position: left;
     background-repeat: no-repeat;
     display: flex;
   }
 
-  div.card-feature {
+  .card-feature {
     width: 31.25%;
     height: 170px;
     float: left;
   }
 
-  div.card-stack {
+  .cardStack {
     width: calc(100% - 66px);
   }
 
@@ -60,7 +59,7 @@
     margin-top: 2px;
   }
 
-  p.description {
+  .description {
     margin-top: 24px;
     position: relative;
     overflow: hidden;
@@ -76,7 +75,7 @@
     margin-top: 5px;
   }
 
-  .card-stack {
+  .cardContent {
     .ficon-lg-arrow-right {
       opacity: 0;
       transition: opacity 0.2s ease-out;
