added style for blog post

--- a/pages/blogs/blogs.module.scss
+++ b/pages/blogs/blogs.module.scss
@@ -1,12 +1,8 @@
 .blogs {
     padding: 30px 0;
-
-    .card {
-        margin-bottom: 15px;
-        box-shadow: 0 2px 10px 1px rgb(82 82 82 / 15%);
-        border: none;
-        border-radius: 0;
-        background-color: #fff;
-    }
+ 
+ .list{
+     padding: 0;
+ }
 
 }
