--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -1,13 +1,13 @@
-
-
 .list {
     list-style: none;
     padding: 0;
+    color: #212529;
 
     li {
         margin: 0;
         padding: 0;
     }
+
     .card {
         margin-bottom: 20px;
         box-shadow: 0 2px 10px 1px rgb(82 82 82 / 15%);
@@ -27,12 +27,35 @@
         }
     }
 
+    a:link {
+        color: #212529;
+    }
+
     a:hover {
         text-decoration: none;
     }
+
+    .title {
+        color: #1e2f46
+    }
+    p,
+    h6 {
+        color: #212529;
+    }
+    @media only screen and (max-width: 750px) {
+        .blogInfo {
+            margin-top:30px;
+        }
+    }
 }
 
-.viewAllItems {
-  margin-left: 5rem;
-  margin-top: 1rem;
+// details page
+
+.back {
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.viewAllItems {    
+    margin-top: 1rem;
 }
