--- a/components/blocks/ge-titled-paragraph/ge-titled-paragraph.module.scss
+++ b/components/blocks/ge-titled-paragraph/ge-titled-paragraph.module.scss
@@ -1,15 +1,14 @@
 // The class name needs to match the names of the category and block
 .geTitledParagraph {
-
+  padding: 50px 0;
   position: relative;
 
-
-  @media only screen and (min-width: 1920px) {
+  
+   @media only screen and (min-width: 1920px) {
 
     h5 {
-      font-size     : 24px;
-      line-height   : 16px;
-     
+      font-size: 24px;
+      line-height: 16px;
     }
   }
 
@@ -18,7 +17,7 @@
       font-size: 20px;
       letter-spacing: 3.43px;
     }
-  } 
+  }
 
   @media only screen and (max-width: 991px) {
     h5 {
@@ -33,12 +32,11 @@
   }
 
   div.content-row {
-    margin-top   : 15px;
+    margin-top: 15px;
     margin-bottom: 15px;
 
     h2 {
       margin-top: 20px;
     }
   }
-
 }
