Add New Report Creator

--- a/styles/css/styles.scss
+++ b/styles/css/styles.scss
@@ -3,6 +3,7 @@
     min-width: 300px !important;
 }
 
+
 .button-secondary,
 .button-primary {
     text-transform: uppercase;
@@ -21,6 +22,7 @@
     text-align: center;
     padding: 60px 0;
     height: 33vh;  
+    min-height: 20rem;
 }
 
 
