--- a/pages/page.module.scss
+++ b/pages/page.module.scss
@@ -1,3 +1,4 @@
+
 .blogs, .reports, .articles {
     padding: 30px 0;
 
@@ -24,3 +25,10 @@
 
 }
 
+
+.loginbutton {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
