updated the exit to edit button style

--- a/pages/page.module.scss
+++ b/pages/page.module.scss
@@ -22,8 +22,12 @@
     .title {
         color: #1e2f46;
     }
-
 }
+.aboutusPage {
+    min-height: 50vh;
+    text-align: center;
+}
+
 
 
 .loginbutton {
