updated popup width

--- a/styles/css/styles.scss
+++ b/styles/css/styles.scss
@@ -3,6 +3,12 @@
   min-width: 300px !important;
 }
 
+// model popup style
+
+.PopupModal-sc-hygjqb.ffyldJ
+{
+  width: 50%;
+}
 .button-secondary,
 .button-primary {
   text-transform: uppercase;
