updated the class name

--- a/styles/css/styles.scss
+++ b/styles/css/styles.scss
@@ -4,10 +4,9 @@
 }
 
 // model popup style
-
-.PopupModal-sc-hygjqb.ffyldJ
+.PopupModal-sc-hygjqb
 {
-  width: 50%;
+  width: 50% !important;
 }
 .button-secondary,
 .button-primary {
