--- a/styles/css/styles.scss
+++ b/styles/css/styles.scss
@@ -85,3 +85,55 @@ button.button-primary.button-position {
   }
 
 }
+
+// content-left-right-image-block
+
+.image-wrapper {
+  .video-feature {
+    width: 120%;
+    position: relative;
+
+    iframe#iframing {
+      min-height: 380px;
+      height: 100%;
+      width: 100%;
+    }
+  }
+
+  .image-feature {
+    position: relative;
+    width: 120%;
+    height: auto;
+
+    img {
+      border: 0;
+      width: 100%;
+      height: auto;
+    }
+
+    svg {
+      background: #fff;
+    }
+
+    button {
+      top: 0 !important;
+      left: 0 !important;
+    }
+  }
+
+}
+
+.image-left {
+  .image-wrapper {
+    .video-feature {
+      position: relative;
+      left: -20%;
+      width: 120%;
+    }
+
+    .image-feature {
+      width: 120%;
+      left: -20%;
+    }
+  }
+}
