--- a/styles/css/styles.scss
+++ b/styles/css/styles.scss
@@ -88,6 +88,37 @@ button.button-primary.button-position {
 
 // content-left-right-image-block
 
+ 
+// Layout variations
+.image-left {
+  .image-wrapper {
+    clear: none;
+    margin-left: 0;
+    order: 1;
+  }
+
+  .text-wrapper {
+    // float     : right;
+    order: 2;
+    padding-left: 10.2%;
+    padding-right: 0;
+  }
+}
+
+.image-right {
+  .image-wrapper {
+    clear: none;
+    margin-right: 0;
+    order: 2;
+  }
+
+  .text-wrapper {
+     order: 1;
+    padding-right: 10.2%;
+    padding-left: 0;
+  }
+}
+
 .image-wrapper {
   .video-feature {
     width: 120%;
