--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -42,11 +42,11 @@
     h6 {
         color: #212529;
     }
-    @media only screen and (max-width: 750px) {
-        .blogInfo {
-            margin-top:30px;
-        }
-    }
+    // @media only screen and (max-width: 750px) {
+    //     .blogInfo {
+    //         margin-top:30px;
+    //     }
+    // }
 }
 
 // details page
