--- a/components/blocks/ge-content-left-right-image/ge-content-left-right-image.module.scss
+++ b/components/blocks/ge-content-left-right-image/ge-content-left-right-image.module.scss
@@ -91,192 +91,11 @@
     }
   }
 
-  main {
-
-    p,
-    .wp-block-button {
-      margin: 1em 0;
-
-      &__link {
-        font-family: gesans-bold;
-        border: 0;
-        padding: 0;
-        text-decoration: none;
-        letter-spacing: 2px;
-        box-shadow: none;
-        text-align: left;
-        border-radius: 0;
-        text-transform: uppercase;
-        font-size: 14px;
-        line-height: 40px;
-        height: 40px;
-        color: var(--ge-dark-blue-grey);
-        background: transparent !important;
-        border-bottom: 2px solid rgba(var(--rgb-ge-dark-blue-grey), .4);
-
-        &:hover {
-          border-bottom: 2px solid var(--ge-dark-blue-grey)
-        }
-      }
-
-      // font color changes
-      &.has-ge-light-blue-color {
-        .wp-block-button__link {
-          color: #00b5e2;
-          border-bottom: 2px solid rgba(0, 181, 226, .4);
-
-          &:hover {
-            color: #00b5e2 !important;
-            border-bottom: 2px solid #00b5e2;
-          }
-        }
-      }
-
-      &.has-ge-primary-blue-color {
-        .wp-block-button__link {
-          color: #0870d8;
-          border-bottom: 2px solid rgba(8, 112, 216, .4);
-
-          &:hover {
-            color: #0870d8 !important;
-            border-bottom: 2px solid #0870d8;
-          }
-        }
-      }
-
-      &.has-ge-dark-blue-grey-color {
-        .wp-block-button__link {
-          color: #1e2f46;
-          border-bottom: 2px solid rgba(30, 47, 70, .4);
-
-          &:hover {
-            color: #1e2f46 !important;
-            border-bottom: 2px solid #1e2f46;
-          }
-        }
-      }
-
-      &.has-ge-dark-light-grey-color {
-        .wp-block-button__link {
-          color: #e5e9ee;
-          border-bottom: 2px solid rgba(229, 233, 238, .4);
-
-          &:hover {
-            color: #e5e9ee !important;
-            border-bottom: 2px solid #e5e9ee;
-          }
-        }
-      }
-
-      &.has-ge-dull-light-grey-color {
-        .wp-block-button__link {
-          color: #f4f4f6;
-          border-bottom: 2px solid rgba(244, 244, 246, .4);
-
-          &:hover {
-            color: #f4f4f6 !important;
-            border-bottom: 2px solid #f4f4f6;
-          }
-        }
-      }
-
-      &.has-ge-dark-indigo-color {
-        .wp-block-button__link {
-          color: #0d1623;
-          border-bottom: 2px solid rgba(13, 22, 35, .4);
-
-          &:hover {
-            color: #0d1623 !important;
-            border-bottom: 2px solid #0d1623;
-          }
-        }
-      }
-
-      &.has-ge-white-color {
-        .wp-block-button__link {
-          color: #fff;
-          border-bottom: 2px solid rgba(255, 255, 255, .4);
-
-          &:hover {
-            color: #fff !important;
-            border-bottom: 2px solid #fff;
-          }
-        }
-      }
-
-      &.has-ge-grey-color {
-        .wp-block-button__link {
-          color: #f0f3f7;
-          border-bottom: 2px solid rgba(240, 243, 247, .4);
-
-          &:hover {
-            color: #f0f3f7 !important;
-            border-bottom: 2px solid #f0f3f7;
-          }
-        }
-      }
-
-      &.has-ge-dark-grey-color {
-        .wp-block-button__link {
-          color: #979797;
-          border-bottom: 2px solid rgba(151, 151, 151, .4);
-
-          &:hover {
-            color: #979797 !important;
-            border-bottom: 2px solid #979797;
-          }
-        }
-      }
-
-      &.has-ge-purple-color {
-        .wp-block-button__link {
-          color: #3e439b;
-          border-bottom: 2px solid rgba(62, 67, 155, .4);
-
-          &:hover {
-            color: #3e439b !important;
-            border-bottom: 2px solid #3e439b;
-          }
-        }
-      }
-
-      &.has-ge-dark-purple-color {
-        .wp-block-button__link {
-          color: #32356e;
-          border-bottom: 2px solid rgba(50, 53, 110, .4);
-
-          &:hover {
-            color: #32356e !important;
-            border-bottom: 2px solid #32356e;
-          }
-        }
-      }
-
-    }
-  }
 
 
-  @media only screen and (min-width: 991px) {
-    main p {
-      font-size: 22px;
-      font-weight: normal;
-      font-stretch: normal;
-      font-style: normal;
-      line-height: 1.55;
-      letter-spacing: normal;
-    }
 
-  }
 
-  @media only screen and (min-width: 1440px) {
-  .image-wrapper {
-    .video-feature {      
-      iframe#iframing {
-        min-height: 500px;   
-      }
-    }
-  }
-}
+
 
   @media only screen and (max-width: 991px) {
 
@@ -289,46 +108,39 @@
 
     }
 
-    .image-wrapper {
+    .imageWrapper {
       padding: 0;
     }
 
-    .image-right {
-      .image-feature {
+    .imageRight {
+      .imageFeature {
         position: relative;
         width: 107.9%;
         height: auto;
       }
     }
 
-    .wp-block-button {
-      &__link {
-        font-size: 11px;
-        letter-spacing: 1.57px;
-      }
-    }
+ 
   }
 
   @media only screen and (max-width: 767px) {
+    
+    
+    .contentwrapper {
+      display: block !important;
 
-    section.image-left .text-wrapper {
-      padding-left: 0;
-      padding-right: 0;
-    }
+      .textWrapper {
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 30px;
+      }
+  
 
-    section.image-right .text-wrapper {
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-    section.image-right {
-      display: block;
-
-      .image-wrapper {
+      .imageWrapper {
         padding: 0;
         margin-top: 2em;
 
-        .image-feature {
+        .imageFeature {
           position: relative;
           width: 106.5%;
           height: auto;
@@ -337,14 +149,14 @@
     }
 
 
-    section.image-left {
+    .contentwrapper {
       display: block;
 
-      .image-wrapper {
+      .imageWrapper {
         padding: 0;
         margin-top: 2em;
 
-        .image-feature {
+        .imageFeature {
           position: relative;
           width: 106%;
           height: auto;
