code adjustment for the ge unified search Note-: After pull please upgrade the latest version of NEXJS/REACTJS
npm install react@latest react-dom@latest
npm install next@latest

--- a/styles/css/styles.scss
+++ b/styles/css/styles.scss
@@ -180,3 +180,12 @@ div.mobile-navbar ul.list-unstyled.nav--list--level1 {
   padding-top: 40px !important;
 }
 }
+
+
+// ge-unified search height
+.hide-element {
+  height:900px;
+}
+.search-icon .active-nav  {
+  border: none;
+}
